@@ -861,15 +861,12 @@ Use CREATE-TEMP-F for creating temp copy."
   (global-semantic-highlight-edits-mode (if window-system 1 -1))
   (global-semantic-show-unmatched-syntax-mode 1)
   (global-semantic-show-parser-state-mode 1)
+  (global-ede-mode 1)
   (when (executable-find "global")
     (semanticdb-enable-gnu-global-databases 'c-mode)
-    (semanticdb-enable-gnu-global-databases 'c++-mode))
-  (global-ede-mode 1)
-
+    (semanticdb-enable-gnu-global-databases 'c++-mode)
+    (setq ede-locate-setup-options '(ede-locate-global ede-locate-base)))
   ;; (setq semantic-c-obey-conditional-section-parsing-flag nil) ; ignore #if
-  (setq ede-locate-setup-options
-        '(ede-locate-global
-          ede-locate-base))
 
   (require 'semantic/bovine/c nil 'noerror)
   (when (executable-find "gcc")
