@@ -1,3 +1,8 @@
+2011-01-13  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-site.el: Fix a bug for ede-cpp-root-project when not
+	install global.
+
 2011-01-10  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el: Don't enable flymake in default.
